# dolbye2sadm

./: CHANGELOG  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conanfile.txt  recreate_reference_files.sh  run_test.sh
Templates/: dolbye_4x2_adm_tplt.xml  dolbye_4x2_sadm_ntsc_tplt.xml  dolbye_5.1+2_ad_adm_tplt.xml  dolbye_5.1+2_adm_tplt.xml  dolbye_5.1+2_adm_tplt_alt_2.0.xml  dolbye_5.1+2_sadm_ntsc_tplt.xml  dolbye_5.1+2_sadm_pal_tplt.xml  dolbye_5.1_adm_tplt.xml  dolbye_5.1_sadm_ntsc_tplt.xml  dolbye_5.1_sadm_pal_tplt.xml
XML Schemas/: dbmd_schema.xsd
src/: ddeinfo.h  dolbye.cpp  dolbye2sadm_main.cpp  dolbye_file.cpp  dolbye_file.h  dolbye_parser.cpp  dolbye_parser.h
test/dde/: 2+2-1.dde  4x2-1.dde  5.1+2-1.dde  5.1+2-2.dde  5.1-1.dde  5.1-2.dde
test/reference/: 2+2-1.xml  4x2-1.xml  5.1+2-1.xml  5.1+2-2.xml  5.1-1.xml  5.1-2.xml
